added enquire page and started form

--- a/index.html
+++ b/index.html
@@ -12,17 +12,23 @@
 <body>
     <div class="main">
         <main>
-            <h1>About Alexis</h1>
-            <p>Hi, I'm Alexis. I'm a software engineer and I love to code.</p>
-            <section>
-                <h2>Protfolio</h2>
-            </section>
+            <div>
+                <h1>About Alexis</h1>
+                <p>Hi, I'm Alexis. I'm a software engineer and I love to code.</p>
+                <section>
+                    <h2>Protfolio</h2>
+                    <article class="positions">
+                        <p class="companies"><a href="https://solstreet.finance" target="_blank">SolStreet</a></p>
+                        <p class="details"> SolStreet is a decentralized finance (DeFi) project that aims to provide a
+                            platform for
+                            users to
+                            earn interest on their crypto assets. The project is built on the Solana blockchain and is
+                            currently in the beta phase.</p>
+                    </article>
+                </section>
+            </div>
         </main>
     </div>
 </body>
-
-<!-- changes -->>
-
-more changes
 
 </html>
